# summertts

./: CMakeLists.txt  README.md  test.txt
bin_arm64/: summertts_test
bin_x64/: summertts_test
lib/: CMakeLists.txt
lib/src/header/: Hanz2Piny.h  hanzi2phoneid.h  pinyinmap.h
lib/src/tn/header/fst/: replace.h
